--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vuefire": "^3.1.23",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
