--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
+    "uid": "^2.0.2",
     "vee-validate": "^4.13.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
